--- a/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Código-CSS.css
+++ b/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Código-CSS.css
@@ -53,19 +53,28 @@
       background-color:rgb(166, 161, 161);
     }
     .p1{
-      background-color:#000000;
+      background-color:black;
       height:100vh;
-      color:white;
+      color: white;
+      text-align: left;
+      text-indent: 15px;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-size: 15px;
+    }
+    .text-p1{
+      width: 900px;
+      height: 600px;
     }
     div img{
-        height: 700px;
-        width: 700px;
+        height: 550px;
+        width: auto;
         float: right;
         filter: brightness(0.4);
     }
     .p2{
       background-color:#6E2594;
       height:100vh;
+      color: #FFFFFF;
     }
     .p3{
       background-color:#FFFFFF;
@@ -75,4 +84,10 @@
       background-color:#6E2594;
       height: 100vh;
     }
-
+    #iadquirir{
+      width:220px;
+      height: 70px;
+      background-color:#ECD444;
+      margin-left: 1150px;
+      margin-bottom: 20px;
+    }
