--- a/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Código-CSS.css
+++ b/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Código-CSS.css
@@ -18,7 +18,8 @@
       width: 100%;
       background-color:#ECD444;
       align-items: center;
-      position: fixed;
+      position:fixed;
+      z-index: 2;
     }
     .conteiner-menu{
       display: flex;
@@ -67,13 +68,18 @@
       text-align: left;
       text-indent: 15px;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      font-size: 15px;
+      font-size: 18px;
     }
     .Features img{
       height: 550px;
       width: auto;
       float: right;
       filter: brightness(0.4);
+      padding-top: 60px;
+      z-index: 1;
+  }
+  .text-Features{
+    padding-top: 71px;
   }
     .text-Features ol {
       padding-left: 20px; 
@@ -83,8 +89,8 @@
       width: 220px;
       height: 70px;
       background-color:#ECD444;
-      margin-left: 1150px;
       margin-bottom: 20px;
+      margin: 10px 0px 0px 200px;
     }
     .p2{
       background-color:#6E2594;
